Login manual corrigido