@@ -8,10 +8,12 @@ import br.com.project.music.business.repositories.MusicoRepository;
 import br.com.project.music.business.repositories.UserRepository;
 import br.com.project.music.exceptions.ResourceNotFoundException;
 import br.com.project.music.services.UserService;
+import org.apache.coyote.BadRequestException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -49,27 +51,25 @@ public class UserController {
     }
 
     @PutMapping("/{id}")
-    public ResponseEntity<?> updateToArtist(
+    public ResponseEntity<?> updateUserRole(
             @PathVariable Long id,
-            @RequestBody ArtistUpdateRequest request) {
+            @RequestBody Map<String, String> request) {
 
-        // 1. Validar usuário
+        // 1. Apenas atualiza o role
         User user = userRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("User not found"));
+                .orElseThrow(() -> new RuntimeException("Usuário não encontrado"));
 
-        // 2. Atualizar role
-        user.setRole(User.Role.ARTISTA);
+        String roleStr = request.get("role");
+        if (roleStr == null) {
+            throw new RuntimeException("Campo 'role' é obrigatório");
+        }
+
+        user.setRole(User.Role.valueOf(roleStr.toUpperCase()));
         userRepository.save(user);
 
-        Musico musico = new Musico();
-        musico.setNomeArtistico(request.getNome_artistico());
-        musico.setRedesSociais(request.getRedes_sociais());
-        musico.setUsuario(user);
-        musicoRepository.save(musico);
-
-        return ResponseEntity.ok(Map.of(
-                "message", "User converted to artist successfully",
-                "artist", musico
+        // 2. Retorna resposta simples
+        return ResponseEntity.ok().body(Collections.singletonMap(
+                "message", "Role atualizado para " + user.getRole()
         ));
     }
 
